Pin number added and fingerprint too.

--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -29,18 +29,26 @@
                     android:layout_height="match_parent">
 
                     <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
                         android:id="@+id/searchInputLayout"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_toStartOf="@id/button_set_key"
                         android:hint="Search"
                         app:endIconMode="clear_text">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/searchInput"
-                            android:singleLine="true"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:singleLine="true" />
                     </com.google.android.material.textfield.TextInputLayout>
+
+                    <Button
+                        android:id="@+id/button_set_key"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:text="Set Key" />
 
                 </RelativeLayout>
 
@@ -72,10 +80,10 @@
                 <Button
                     android:id="@+id/loadMoreButton"
                     android:layout_width="match_parent"
-                    android:visibility="gone"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/recyclerview"
-                    android:text="Load more" />
+                    android:text="Load more"
+                    android:visibility="gone" />
             </RelativeLayout>
 
         </androidx.core.widget.NestedScrollView>
