--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -2,17 +2,17 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_navigation"
-    app:startDestination="@id/listFragment">
+    app:startDestination="@id/dashboardFragment">
 
     <fragment
-        android:id="@+id/listFragment"
-        android:name="com.jatezzz.tvmaze.list.ListFragment"
-        android:label="ListFragment">
+        android:id="@+id/dashboardFragment"
+        android:name="com.jatezzz.tvmaze.dashboard.DashboardFragment"
+        android:label="DashboardFragment">
         <action
-            android:id="@+id/action_listFragment_to_showFragment"
+            android:id="@+id/action_dashboardFragment_to_showFragment"
             app:destination="@id/showFragment" />
         <action
-            android:id="@+id/action_listFragment_to_authenticationFragment"
+            android:id="@+id/action_dashboardFragment_to_authenticationFragment"
             app:destination="@id/authenticationFragment" />
     </fragment>
     <fragment
@@ -41,8 +41,8 @@
         android:name="com.jatezzz.tvmaze.authentication.AuthenticationFragment"
         android:label="AuthenticationFragment">
         <action
-            android:id="@+id/action_authenticationFragment_to_listFragment"
-            app:destination="@id/listFragment" />
+            android:id="@+id/action_authenticationFragment_to_dashboardFragment"
+            app:destination="@id/dashboardFragment" />
         <argument
             android:name="isInSettingProcess"
             app:argType="boolean"
