Favorite shows capability added.

--- a/app/src/main/res/layout/popup_biometric_access.xml
+++ b/app/src/main/res/layout/popup_biometric_access.xml
@@ -49,6 +49,6 @@
       android:layout_height="wrap_content"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="10dp"
-      android:text="do_not_ask_again" />
+      android:text="Do not show Again" />
 
 </LinearLayout>
