--- a/app/src/main/res/layout/fragment_show.xml
+++ b/app/src/main/res/layout/fragment_show.xml
@@ -57,7 +57,7 @@
                 android:orientation="vertical"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:itemCount="4"
-                tools:listitem="@layout/item_show" />
+                tools:listitem="@layout/item_genre" />
 
             <TextView
                 android:id="@+id/text_view_summary"
@@ -79,6 +79,12 @@
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:itemCount="4"
                 tools:listitem="@layout/item_show" />
+
+            <CheckBox
+                android:id="@+id/check_box_favorite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Favorite Show" />
 
         </LinearLayout>
 
