--- a/app/src/main/res/layout/item_show.xml
+++ b/app/src/main/res/layout/item_show.xml
@@ -24,5 +24,13 @@
         android:layout_alignParentStart="true"
         android:background="@color/cardview_light_background"
         android:contentDescription="@null" />
+
+    <Button
+        android:id="@+id/button_delete"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:text="X"
+        android:visibility="gone" />
 </RelativeLayout>
 
