--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -13,5 +13,9 @@
       android:id="@+id/action_people"
       android:icon="@drawable/ic_people"
       android:title="People" />
+  <item
+      android:id="@+id/action_settings"
+      android:icon="@drawable/ic_settings"
+      android:title="Settings" />
 
 </menu>
