Shows screen updated.

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -28,9 +28,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:background="#FF5722"
-            app:itemIconTint="#227AFF"
-            app:itemTextColor="#FFEB3B"
+            android:background="@drawable/bg_only_top_line_white_rectangle"
+            app:itemIconTint="@drawable/bottom_nav_icon_color_selector"
+            app:itemTextColor="@drawable/bottom_nav_icon_color_selector"
             app:labelVisibilityMode="labeled"
             app:layout_anchor="@id/main_container_view"
             app:layout_anchorGravity="bottom|center"
