--- a/app/src/main/res/layout/item_show.xml
+++ b/app/src/main/res/layout/item_show.xml
@@ -2,16 +2,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingTop="10dp">
 
     <TextView
         android:id="@+id/name"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="75dp"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="31dp"
         android:layout_toEndOf="@id/image"
+        android:ellipsize="end"
+        android:paddingStart="15dp"
+        android:gravity="center_vertical"
         android:text="@string/app_name"
+        android:textAppearance="?attr/textAppearanceHeadline6"
         app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,11 +23,11 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
-        android:background="@color/cardview_light_background"
-        android:contentDescription="@null" />
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:fitsSystemWindows="true"
+        android:scaleType="centerInside"
+        app:layout_collapseMode="parallax" />
 
     <Button
         android:id="@+id/button_delete"
